--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ baseurl: "/"
 title: Deepak Chauhan
 author: Deepak Chauhan
 description: Personal blog and resume
-avatar: profile.jpg
+avatar: dc.jpg
 email: dc84477@gmail.com
 github: mrdeepakchauhan # username
 #twitter: username
