--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ description: Personal blog and resume
 avatar: dc.jpg
 email: dc84477@gmail.com
 github: mrdeepakchauhan # username
-#twitter: username
+twitter: dc84477
 linkedin: deepakchauhan
 #stackoverflow: username   #e.g: users/2735833/proton1h1
 #Comment out if you don't want disqus
